--- a/AdminDashboard/public/index.html
+++ b/AdminDashboard/public/index.html
@@ -9,6 +9,11 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <link rel="icon" href="https://findicons.com/files/icons/2526/bloggers/256/admin.png">
+  <script
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBIwzALxUPNbatRBj3Xi1Uhp0fFzwWNBkE&callback=initMap&libraries=&v=weekly"
+  async
+></script>
+
   <title>Tunisian Fann</title>
 </head>
 
