created 2 new components of details

--- a/Users/public/index.html
+++ b/Users/public/index.html
@@ -32,7 +32,7 @@
       crossorigin="anonymous"
     />
     <!-- //semantic cdn -->
-      <script
+      <!-- <script
         src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"
         integrity="sha512-dqw6X88iGgZlTsONxZK9ePmJEFrmHwpuMrsUChjAw1mRUhUITE5QU9pkcSox+ynfLhL15Sv2al5A0LVyDCmtUw=="
         crossorigin="anonymous"
@@ -42,13 +42,13 @@
         href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css"
         integrity="sha512-8bHTC73gkZ7rZ7vpqUQThUDhqcNFyYi2xgDgPDHc+GXVGHXq+xPjynxIopALmOPqzo9JZj0k6OqqewdGO3EsrQ=="
         crossorigin="anonymous"
-      />
+      /> -->
     <!-- //semantic cdn -->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
+    <!-- <link
       href="https://fonts.googleapis.com/css2?family=Neuton&display=swap"
       rel="stylesheet"
-    />
+    /> -->
     <link
       href="https://fonts.googleapis.com/css2?family=Spectral&display=swap"
       rel="stylesheet"
@@ -65,44 +65,44 @@
       crossorigin="anonymous"
     ></script>
     <!-- //cdn for the artist profile -->
-    <link href="/assets/css/material-kit.css?v=2.0.4" rel="stylesheet" />
+    <!-- <link href="/assets/css/material-kit.css?v=2.0.4" rel="stylesheet" />
     <script
       src="assets/js/material-kit.js?v=2.0.4"
       type="text/javascript"
-    ></script>
+    ></script> -->
     <link
       rel="stylesheet"
       href="https://unpkg.com/bootstrap-material-design@4.1.1/dist/css/bootstrap-material-design.min.css"
       integrity="sha384-wXznGJNEXNG1NFsbm0ugrLFMQPWswR3lds2VeinahP8N0zJw9VWSopbjv2x7WCvX"
       crossorigin="anonymous"
     />
-    <link
+    <!-- <link
       href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css"
       rel="stylesheet"
-    />
-    <link
+    /> -->
+    <!-- <link
       rel="stylesheet"
       type="text/css"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons"
-    />
-    <link
+    /> -->
+    <!-- <link
       rel="stylesgeet"
       href="https://rawgit.com/creativetimofficial/material-kit/master/assets/css/material-kit.css"
-    />
+    /> -->
     <!-- //cdn for artist artist profile -->
 
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 
-    <script
+    <!-- <script
       src="https://unpkg.com/popper.js@1.12.6/dist/umd/popper.js"
       integrity="sha384-fA23ZRQ3G/J53mElWqVJEGJzU0sTs+SvzG8fXVWP+kJQ1lwFAOkcUOysnlKJC33U"
       crossorigin="anonymous"
-    ></script>
-    <script
+    ></script> -->
+    <!-- <script
       src="https://unpkg.com/bootstrap-material-design@4.1.1/dist/js/bootstrap-material-design.js"
       integrity="sha384-CauSuKpEqAFajSpkdjv3z9t8E7RlpJ1UP0lKM/+NdtSarroVKu069AlsRPKkFBz9"
       crossorigin="anonymous"
-    ></script>
+    ></script> -->
   </head>
 
   <body class="profile-page">
