condition-banned-artist

--- a/Users/public/index.html
+++ b/Users/public/index.html
@@ -17,7 +17,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <script src="https://js.stripe.com/v3/" crossorigin="anonymous"></script>
+    <script src="https://js.stripe.com/v3/"></script>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -115,4 +115,3 @@
     <!-- built files will be auto injected -->
   </body>
 </html>
-4242424242424242
